app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fitness-tracker-app
  namespace: l-ns
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: fitness-tracker-app
  template:
    metadata:
      labels:
        app: fitness-tracker-app
      annotations:
        ad.datadoghq.com/fitness-tracker-app.logs: >-
          [{"source":"nodejs","service":"fitness-tracker-service"},
           {"source":"nodejs","service":"fitness-tracker-app"}]
    spec:
      tolerations:
      - key: "app"
        operator: "Equal"
        value: "myapp"
        effect: "NoSchedule"
      containers:
        - name: fitness-tracker-app
          image: pulkit197/fitness_tracker-master-copy3-fitness-app:latest
          ports:
            - containerPort: 5000
          # resources:
          #   limits:
          #     memory: "512Mi"
          #     cpu: "200m"
          #   requests:
          #     memory: "256Mi"
          #     cpu: "100m"
---

apiVersion: v1
kind: Service
metadata:
  name: fitness-tracker-service
  namespace: l-ns
spec:
  selector:
    app: fitness-tracker-app
  ports:
  - port: 80
    targetPort: 5000
  type: ClusterIP
