fitness-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: fitness-route
  namespace: l-ns
spec:
  parentRefs:
    - name: sales-gateway
      namespace: sales-gateway-ns
  rules:
    - matches: 
        - path: 
            type: PathPrefix 
            value: /
      backendRefs:
        - name: fitness-tracker-service
          port: 80
